@@ -52,6 +52,7 @@ SocketTask::SocketTask(arangodb::EventLoop loop,
       _connectionInfo(connectionInfo),
       _readBuffer(TRI_UNKNOWN_MEM_ZONE, READ_BLOCK_SIZE + 1, false),
       _writeBuffer(nullptr, nullptr),
+      _strand(socket->_ioService),
       _peer(std::move(socket)),
       _keepAliveTimeout(static_cast<long>(keepAliveTimeout * 1000)),
       _keepAliveTimer(_peer->_ioService, _keepAliveTimeout),
@@ -163,44 +164,46 @@ void SocketTask::writeWriteBuffer() {
     return;
   }
 
-  size_t total = _writeBuffer._buffer->length();
-  size_t written = 0;
+  if (!_peer->isEncrypted()) {
+    size_t total = _writeBuffer._buffer->length();
+    size_t written = 0;
 
-  boost::system::error_code err;
-  err.clear();
+    boost::system::error_code err;
+    err.clear();
 
-  while (true) {
-    RequestStatistics::SET_WRITE_START(_writeBuffer._statistics);
-    written = _peer->write(_writeBuffer._buffer, err);
+    while (true) {
+      RequestStatistics::SET_WRITE_START(_writeBuffer._statistics);
+      written = _peer->write(_writeBuffer._buffer, err);
 
-    if (err) {
-      break;
+      if (err) {
+        break;
+      }
+
+      RequestStatistics::ADD_SENT_BYTES(_writeBuffer._statistics, written);
+
+      if (written != total) {
+        // unable to write everything at once, might be a lot of data
+        // above code does not update the buffer positon
+        break;
+      }
+
+      if (!completedWriteBuffer()) {
+        return;
+      }
+
+      // try to send next buffer
+      total = _writeBuffer._buffer->length();
+      written = 0;
     }
 
-    RequestStatistics::ADD_SENT_BYTES(_writeBuffer._statistics, written);
-
-    if (written != total) {
-      // unable to write everything at once, might be a lot of data
-      // above code does not update the buffer positon
-      break;
-    }
-
-    if (!completedWriteBuffer()) {
-      return;
-    }
-
-    // try to send next buffer
-    total = _writeBuffer._buffer->length();
-    written = 0;
-  }
-
-  // write could have blocked which is the only acceptable error
-  if (err && err != ::boost::asio::error::would_block) {
-    LOG_TOPIC(DEBUG, Logger::COMMUNICATION)
+    // write could have blocked which is the only acceptable error
+    if (err && err != ::boost::asio::error::would_block) {
+      LOG_TOPIC(DEBUG, Logger::COMMUNICATION)
         << "SocketTask::addWriteBuffer (write_some) - write on stream "
         << " failed with: " << err.message();
-    closeStream();
-    return;
+      closeStream();
+      return;
+    }
   }
 
   // so the code could have blocked at this point or not all data
@@ -209,7 +212,7 @@ void SocketTask::writeWriteBuffer() {
   _peer->asyncWrite(
       boost::asio::buffer(_writeBuffer._buffer->begin() + written,
                           total - written),
-      [self, this](const boost::system::error_code& ec,
+      _strand.wrap([self, this](const boost::system::error_code& ec,
                    std::size_t transferred) {
         MUTEX_LOCKER(locker, _writeLock);
 
@@ -226,7 +229,7 @@ void SocketTask::writeWriteBuffer() {
             _loop._scheduler->post([self, this]() { writeWriteBuffer(); });
           }
         }
-      });
+      }));
 }
 
 bool SocketTask::completedWriteBuffer() {
@@ -401,46 +404,48 @@ bool SocketTask::processAll() {
 
 void SocketTask::asyncReadSome() {
   MUTEX_LOCKER(locker, _readLock);
+    
+  if (_abandoned) {
+    return;
+  }
 
-  try {
-    if (_abandoned) {
-      return;
-    }
+  if (!_peer->isEncrypted()) {
+    try {
+      size_t const MAX_DIRECT_TRIES = 2;
+      size_t n = 0;
 
-    size_t const MAX_DIRECT_TRIES = 2;
-    size_t n = 0;
-
-    while (++n <= MAX_DIRECT_TRIES) {
-      if (!reserveMemory()) {
-        LOG_TOPIC(TRACE, Logger::COMMUNICATION) << "failed to reserve memory";
-        return;
-      }
-
-      if (!trySyncRead()) {
-        if (n < MAX_DIRECT_TRIES) {
-#ifdef TRI_HAVE_SCHED_H
-          sched_yield();
-#endif
+      while (++n <= MAX_DIRECT_TRIES) {
+        if (!reserveMemory()) {
+          LOG_TOPIC(TRACE, Logger::COMMUNICATION) << "failed to reserve memory";
+          return;
         }
 
-        continue;
+        if (!trySyncRead()) {
+          if (n < MAX_DIRECT_TRIES) {
+#ifdef TRI_HAVE_SCHED_H
+            sched_yield();
+#endif
+          }
+
+          continue;
+        }
+
+        // ignore the result of processAll, try to read more bytes down below
+        processAll();
+        compactify();
       }
+    } catch (boost::system::system_error& err) {
+      LOG_TOPIC(DEBUG, Logger::COMMUNICATION) << "i/o stream failed with: "
+        << err.what();
 
-      // ignore the result of processAll, try to read more bytes down below
-      processAll();
-      compactify();
+      closeStream();
+      return;
+    } catch (...) {
+      LOG_TOPIC(DEBUG, Logger::COMMUNICATION) << "general error on stream";
+
+      closeStream();
+      return;
     }
-  } catch (boost::system::system_error& err) {
-    LOG_TOPIC(DEBUG, Logger::COMMUNICATION) << "i/o stream failed with: "
-                                            << err.what();
-
-    closeStream();
-    return;
-  } catch (...) {
-    LOG_TOPIC(DEBUG, Logger::COMMUNICATION) << "general error on stream";
-
-    closeStream();
-    return;
   }
 
   // try to read more bytes
@@ -458,7 +463,7 @@ void SocketTask::asyncReadSome() {
 
     _peer->asyncRead(
         boost::asio::buffer(_readBuffer.end(), READ_BLOCK_SIZE),
-        [self, this](const boost::system::error_code& ec,
+        _strand.wrap([self, this](const boost::system::error_code& ec,
                      std::size_t transferred) {
           JobGuard guard(_loop);
           guard.work();
@@ -478,7 +483,7 @@ void SocketTask::asyncReadSome() {
 
             compactify();
           }
-        });
+        }));
   }
 }
 
